plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.veriview'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	jcenter()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'jakarta.annotation:jakarta.annotation-api:2.1.0'
	implementation 'io.jsonwebtoken:jjwt:0.12.0'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.0'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.0'
	implementation 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.hibernate.orm:hibernate-core:6.4.0.Final' 
	
	implementation 'org.jsoup:jsoup:1.16.1'
  
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaExec) {
    jvmArgs += "--add-opens=java.base/sun.security.util=ALL-UNNAMED"
}